--- a/index.html
+++ b/index.html
@@ -99,6 +99,36 @@
         <a href="rtsp://officetv.bupt.edu.cn/DFWS-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 东方卫视</a>
         <a href="rtsp://officetv.bupt.edu.cn/chc-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 高清电影</a>
       </div>
+
+      <h5>CCAV-模糊</h5>
+      <div class="well">
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-1" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-1综合</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-2" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-2经济</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-3" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-3综艺</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-4" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-4综合国际</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-5" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-5体育</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-6" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-6电影</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-7" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-7少儿军事</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-8" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-8电视剧</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-9" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-9英语国际</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-10" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-10走近科学</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-11" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-11戏曲</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-12" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-12社会与法</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-news" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV新闻</a>
+      </div>
+
+      <h5>BTV-模糊</h5>
+      <div class="well">
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-1" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-1</a>
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-2" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-2</a>
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-3" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-3</a>
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-4" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-4</a>
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-5" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-5</a>
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-6" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-6</a>
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-7" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-7</a>
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-8" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-8</a>
+        <a href="rtsp://officetv.bupt.edu.cn/BTV-9" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 海淀有线</a>
+      </div>
     </div><!-- /.container -->
 
     <div id="about-me" class="container about-me hidden">
