5th page commit

--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
 
       <h5>CCAV-模糊</h5>
       <div class="well">
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-1" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-1综合</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-2" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-2经济</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-3" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-3综艺</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-4" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-4综合国际</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-5" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-5体育</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-6" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-6电影</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-7" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-7少儿军事</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-8" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-8电视剧</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-9" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-9英语国际</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-10" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-10走近科学</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-11" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-11戏曲</a>
-        <a href="rtsp://officetv.bupt.edu.cn/CCTV-12" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-12社会与法</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-1" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-1</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-2" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-2</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-3" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-3</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-4" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-4</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-5" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-5</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-6" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-6</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-7" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-7</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-8" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-8</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-9" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-9</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-10" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-10</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-11" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-11</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CCTV-12" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV-12</a>
         <a href="rtsp://officetv.bupt.edu.cn/CCTV-news" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> CCTV新闻</a>
       </div>
 
@@ -128,6 +128,30 @@
         <a href="rtsp://officetv.bupt.edu.cn/BTV-7" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-7</a>
         <a href="rtsp://officetv.bupt.edu.cn/BTV-8" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-8</a>
         <a href="rtsp://officetv.bupt.edu.cn/BTV-9" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 海淀有线</a>
+      </div>
+
+      <h5>卫视-模糊</h5>
+      <div class="well">
+        <a href="rtsp://officetv.bupt.edu.cn/HNWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 湖南卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/HBWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 湖北卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/LNWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 辽宁卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/SHWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 上海卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/YNWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 云南卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/FJWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 福建卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/SDWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 山东卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/AHWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 安徽卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/SZWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 深圳卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/ZJWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 浙江卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/CQWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 重庆卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/JSWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 江苏卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/JXWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 江西卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/TJWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 天津卫视</a>
+      </div>
+
+      <h5>其他－模糊</h5>
+      <div class="well">
+        <a href="rtsp://officetv.bupt.edu.cn/KKDH" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 卡酷动画</a>
+        <a href="rtsp://officetv.bupt.edu.cn/LYWS" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 旅游卫视</a>
       </div>
     </div><!-- /.container -->
 
