6th page commit

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a href="rtsp://officetv.bupt.edu.cn/BTV-2-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-2</a>
         <a href="rtsp://officetv.bupt.edu.cn/BTV-6-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> BTV-6</a>
         <a href="rtsp://officetv.bupt.edu.cn/ZJWS-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 浙江卫视</a>
-        <a href="rtsp://officetv.bupt.edu.cn/HNSW-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 湖南卫视</a>
+        <a href="rtsp://officetv.bupt.edu.cn/HNWS-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 湖南卫视</a>
         <a href="rtsp://officetv.bupt.edu.cn/JSWS-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 江苏卫视</a>
         <a href="rtsp://officetv.bupt.edu.cn/DFWS-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 东方卫视</a>
         <a href="rtsp://officetv.bupt.edu.cn/chc-HD" class="col-md-2"><span class="glyphicon glyphicon-play-circle"></span> 高清电影</a>
